background image and gradient

--- a/about.html
+++ b/about.html
@@ -15,6 +15,6 @@
         <a href="./contact.html">contact</a>
       </nav>
     </header>
-    <h1>about</h1>
+    <h1><span class="letter-a">a</span>bout</h1>
   </body>
 </html>
