--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
         <a href="./contact.html">contact</a>
       </nav>
     </header>
-    <h1>homepage</h1>
+    <div class="background"></div>
   </body>
 </html>
