BHM button animation

--- a/index.html
+++ b/index.html
@@ -8,13 +8,6 @@
     <link rel="stylesheet" href="./assets/main.css" />
   </head>
   <body>
-    <header>
-      <nav class="navigation">
-        <a href="./index.html">home</a>
-        <a href="./about.html">about</a>
-        <a href="./contact.html">contact</a>
-      </nav>
-    </header>
-    <div class="background"></div>
+    <button class="btn">donate</button>
   </body>
 </html>
