--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/main.css" />
   </head>
   <body>
-    <button class="btn">donate</button>
+    <button class="btn-1">donate</button>
+    <!-- <button class="btn-2">donate</button> -->
   </body>
 </html>
